--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="image-section">
                 <div class="plant-image">
                     <!-- Попробуйте разные варианты пути к изображению -->
-                    <img src="IMG_9017.jpg" alt="Хамедорея изящная" onerror="this.onerror=null; this.src='https://yellowgreen2023.github.io/plant-guide/IMG_9017.jpg';">
+                    <img src="chamaedorea.jpg" alt="Хамедорея изящная">
                 </div>
             </div>
         </div>
